# sci-comp-course-example-cxx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  threaded-sequence-diagram.md
Mountains.jl/: Project.toml
Mountains.jl/examples/: generatesamples.jl
Mountains.jl/src/: MountainRange.jl  Mountains.jl  io.jl  ruggedness.jl  solve.jl  solve_diffeq.jl  step.jl  utils.jl
Mountains.jl/test/: runtests.jl
docs/: MountainRange-class-diagram.md  MountainRange-sequence-diagram.md  MountainRange-simplified-sequence-diagram.md  MountainRangeBasic-sequence-diagram.md  MountainRangeGPU-sequence-diagram.md  MountainRangeMPI-sequence-diagram.md  MountainRangeThreaded-sequence-diagram.md
samples/: 1d-small-in.mr  1d-small-out.mr  1d-tiny-in.mr  1d-tiny-out.mr  small-1D-in.mr  small-1D-out.mr  tiny-1D-out.mr
src/: MountainRange.hpp  MountainRangeBasic.hpp  MountainRangeGPU.hpp  MountainRangeIOException.hpp  MountainRangeMPI.hpp  MountainRangeOpenMP.hpp  MountainRangeSharedMem.hpp  MountainRangeThreaded.hpp  MountainRangeThreaded.hpp.orig  initial.cpp  initial.jl  mountain_diff.cpp  mountaindiff.cpp  mountainsolve.cpp  mountainsolve_gpu.cpp  mountainsolve_openmp.cpp  run_solver.hpp  solver_mpi.cpp  solver_thread.cpp  utils.hpp
test/: test_solver.sh
